fixed errors after run lint

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -11,7 +11,10 @@
   </div>
   <section class="left">
     <h1>Find place</h1>
-    <div class="sort-header"><div>Sort: </div><app-sort-container class="sort-container"></app-sort-container></div>
+    <div class="sort-header">
+      <div>Sort:</div>
+      <app-sort-container class="sort-container"></app-sort-container>
+    </div>
     <app-bonus-list-container
       class="bonus-list"
       [bonusButtonLabel]="bonusButtonLabel"
