--- a/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let bonus of bonuses; trackBy: trackById; first as isFirst" class="bonus-container">
-  <app-bonus [bonus]="bonus" [bonusButtonLabel]="bonusButtonLabel" (bonusButtonClickedEvent)="bonusButtonClicked($event)" [class.bonusForAnimation]="ifBonusFromMap && isFirst"></app-bonus>
+<div *ngFor="let bonus of bonuses; trackBy: trackById" class="bonus-container">
+  <app-bonus [bonus]="bonus" [bonusButtonLabel]="bonusButtonLabel" (bonusButtonClickedEvent)="bonusButtonClicked($event)"></app-bonus>
 </div>
