--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -156,6 +156,9 @@
     margin-bottom: 10px;
     height: 200px;
   }
+  .first .bonus {
+    width: 300px;
+  }
 }
 
 @media (max-width: 540px), (max-device-width: 540px) {
