--- a/src/app/shared/components/city-input/city-input.component.html
+++ b/src/app/shared/components/city-input/city-input.component.html
@@ -14,7 +14,7 @@
   </mat-autocomplete>
   <button
     mat-button
-    *ngIf="cityInputControl.dirty"
+    *ngIf="cityInputControl.value"
     matSuffix
     mat-icon-button
     aria-label="Clear"
