--- a/src/app/features/add-bonus/add-bonus-form/add-bonus-form.component.html
+++ b/src/app/features/add-bonus/add-bonus-form/add-bonus-form.component.html
@@ -78,7 +78,7 @@
     </mat-form-field>
     <mat-form-field class="add-bonus-input" appearance="fill">
       <mat-label>{{ 'addBonus.form.bonusTitle' | translate }}</mat-label>
-      <input autocomplete="off" matInput type="text" formControlName="bonusTitle" />
+      <input autocomplete="off" matInput type="text" formControlName="bonusTitle" maxlength="40" />
     </mat-form-field>
     <mat-form-field class="add-bonus-input" appearance="fill">
       <mat-label>{{ 'addBonus.form.bonusTags' | translate }}</mat-label>
