--- a/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.scss
@@ -1,5 +1,7 @@
 @media (max-width: 540px), (max-device-width: 540px) {
   .bonus-container {
     width: 100%;
+    margin-right: 20px;
+    padding-top: 10px;
   }
 }
