--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -1,6 +1,7 @@
 <section class="bonus" [ngClass]="{ 'show-form': isForm }">
   <div class="description-container">
     <span class="vendor-name">{{ bonus.company.name }}</span>
+    <div class="bonus-name in-mobile">{{ bonus.type }}</div>
     <p class="bonus-description">{{ bonus.description }}</p>
   </div>
   <div class="bonus-content">
@@ -10,7 +11,7 @@
     </app-rate>
     <div *ngIf="!isForm" class="interactive-container">
       <div>
-        <div class="bonus-name">{{ bonus.type }}</div>
+        <div class="bonus-name in-pc">{{ bonus.type }}</div>
         <div class="tags">
           <span class="tag" *ngFor="let tag of bonus.tags">{{ tag }}</span>
         </div>
