--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -14,7 +14,7 @@
         <ul class="menu" appCloseMenu (clickMenuItem)="toggleMenu()">
           <li>
             <span class="login-as-label">{{ 'header.loginAs' | translate }}</span>
-            <span class="login-as-text">{{ user?.first_name }} {{ user?.last_name }} </span>
+            <span class="login-as-text">{{ user?.firstName }} {{ user?.lastName }} </span>
           </li>
           <li class="menu-item">
             <a [routerLink]="['/home']" [routerLinkActive]="'active'">{{
