--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.scss
@@ -7,5 +7,14 @@
   .bonuses {
     flex-direction: row;
     flex-wrap: nowrap;
+    justify-content: space-between;
+  }
+}
+
+
+@media (max-device-width: 1150px) and (min-device-width: 541px), (max-width: 1150px) and (min-width: 541px) {
+  .bonuses {
+    justify-content: center;
+    padding: 10px;
   }
 }
