--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -167,7 +167,7 @@
     width: 100vw;
     flex-direction: column;
     padding-bottom: 5px;
-    border-left: 3px solid $theme-color;
+    border: 2px solid $theme-color;
     box-shadow: 10px -4px 8px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
   }
