--- a/src/app/features/home/confirm/confirm.component.html
+++ b/src/app/features/home/confirm/confirm.component.html
@@ -1,5 +1,7 @@
-<h2 mat-dialog-title>{{'home.confirm.question' | translate}}</h2>
+<h2 mat-dialog-title>{{ 'home.confirm.question' | translate }}</h2>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>{{'home.confirm.no' | translate}}</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>{{'home.confirm.yes' | translate}}</button>
+  <button mat-button mat-dialog-close>{{ 'home.confirm.no' | translate }}</button>
+  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>
+    {{ 'home.confirm.yes' | translate }}
+  </button>
 </mat-dialog-actions>
