--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
@@ -2,5 +2,6 @@
   [bonuses]="bonuses"
   [bonusButtonLabel]="bonusButtonLabel"
   (bonusButtonClickedEvent)="bonusButtonClicked($event)"
+  [ifBonusMap]="ifBonusMap"
   class="bonuses"
 ></app-bonus-list-view>
