--- a/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
@@ -1,13 +1,12 @@
-<div appTransitionGroup="'flip-list'">
-  <div
-    *ngFor="let bonus of bonuses; trackBy: trackById"
-    class="bonus-container"
-    appTransitionGroupItem
-  >
-    <app-bonus
-      [bonus]="bonus"
-      [bonusButtonLabel]="bonusButtonLabel"
-      (bonusButtonClickedEvent)="bonusButtonClicked($event)"
-    ></app-bonus>
-  </div>
+<div
+  *ngFor="let bonus of bonuses; trackBy: trackById; first as isFirst"
+  class="bonus-container"
+  [@inOutAnimation]
+>
+  <app-bonus
+    [bonus]="bonus"
+    [bonusButtonLabel]="bonusButtonLabel"
+    (bonusButtonClickedEvent)="bonusButtonClicked($event)"
+    [appScrollToFirst]="isFirst && ifBonusMap"
+  ></app-bonus>
 </div>
