--- a/src/app/features/home/map/bonus-popup/bonus-popup.component.html
+++ b/src/app/features/home/map/bonus-popup/bonus-popup.component.html
@@ -8,5 +8,5 @@
     'popup.detail' | translate
   }}</a> -->
 
-  <button (click)="showBonusMap()">{{ 'popup.detail' | translate }}</button>
+  <button mat-flat-button color="primary" (click)="showBonusMap()">{{ 'popup.detail' | translate }}</button>
 </div>
