--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.scss
@@ -11,8 +11,8 @@
   }
 }
 
-
-@media (max-device-width: 1150px) and (min-device-width: 541px), (max-width: 1150px) and (min-width: 541px) {
+@media (max-device-width: 1150px) and (min-device-width: 541px),
+  (max-width: 1150px) and (min-width: 541px) {
   .bonuses {
     justify-content: center;
     padding: 10px;
