change logic for scroll

--- a/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-view/bonus-list-view.component.html
@@ -7,6 +7,6 @@
     [bonus]="bonus"
     [bonusButtonLabel]="bonusButtonLabel"
     (bonusButtonClickedEvent)="bonusButtonClicked($event)"
-    [appScrollToFirst]="isFirst && ifBonusMap"
+    [ifBonusFromMap]="isFirst && ifBonusMap"
   ></app-bonus>
 </div>
