--- a/src/app/features/statistics/statistics.component.html
+++ b/src/app/features/statistics/statistics.component.html
@@ -66,7 +66,7 @@
     </button>
   </div>
 
-  <div class="table">
+  <div class="table" *ngIf="!loading; else loadingBlock">
     <mat-table [dataSource]="dataSource" matSort>
       <ng-container matColumnDef="companyName">
         <mat-header-cell *matHeaderCellDef mat-sort-header>
@@ -93,14 +93,16 @@
         <mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'statistics.dateStart' | translate }}
         </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.dateStart }} </mat-cell>
+        <mat-cell *matCellDef="let element" class="start-column">
+          {{ element.dateStart }}
+        </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="dateEnd">
         <mat-header-cell *matHeaderCellDef mat-sort-header>
           {{ 'statistics.dateEnd' | translate }}
         </mat-header-cell>
-        <mat-cell *matCellDef="let element"> {{ element.dateEnd }} </mat-cell>
+        <mat-cell *matCellDef="let element" class="end-column"> {{ element.dateEnd }} </mat-cell>
       </ng-container>
 
       <ng-container matColumnDef="rating">
@@ -135,6 +137,10 @@
       <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
     </mat-table>
   </div>
+
+  <ng-template #loadingBlock>
+    <mat-spinner class="spinner"></mat-spinner>
+  </ng-template>
 
   <mat-paginator [pageSizeOptions]="[10, 20, 50]" showFirstLastButtons></mat-paginator>
 </div>
