--- a/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus-list-container.component.html
@@ -1,6 +1,11 @@
 <app-bonus-list-view
+  *ngIf="!loading; else loadingBlock"
   [bonuses]="bonuses"
   [bonusButtonLabel]="bonusButtonLabel"
   (bonusButtonClickedEvent)="bonusButtonClicked($event)"
   class="bonuses"
 ></app-bonus-list-view>
+
+<ng-template #loadingBlock>
+  <mat-spinner class="spinner"></mat-spinner>
+</ng-template>
