--- a/src/app/features/home/confirm/confirm.component.html
+++ b/src/app/features/home/confirm/confirm.component.html
@@ -1,7 +1,27 @@
-<h2 mat-dialog-title>{{ 'home.confirm.question' | translate }}</h2>
+<h2 class="apply" mat-dialog-title>{{ 'home.confirm.question' | translate }}</h2>
+<mat-dialog-content class="mat-typography content">
+  <h4 class="company-name">{{ data?.company.name }}</h4>
+  <div class="title-container">
+    <img class="discount-icon" src="assets/icons/discount-icon.svg" alt="discount" />
+    <span class="bonus-title"> {{ data?.title }}</span>
+  </div>
+  <p class="bonus-description">
+    <span class="description-title">Description:</span> {{ data?.description }}
+  </p>
+  <div class="phone-container">
+    <span class="bonus-phone">Phone:</span
+    ><a class="phone-link" href="tel:+{{ data?.phone }}"> +{{ data?.phone }}</a>
+  </div>
+  <ul class="address-list">
+    <span class="bonus-address">Address:</span>
+    <li *ngFor="let location of data?.locations">
+      <p>{{ location?.country }}, {{ location?.city }} {{ location?.address }}</p>
+    </li>
+  </ul>
+</mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>{{ 'home.confirm.no' | translate }}</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>
+  <button class="apply-btn" mat-button mat-dialog-close>{{ 'home.confirm.no' | translate }}</button>
+  <button class="apply-btn" mat-button [mat-dialog-close]="true" cdkFocusInitial>
     {{ 'home.confirm.yes' | translate }}
   </button>
 </mat-dialog-actions>
