--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -1,6 +1,6 @@
 <section class="bonus" [ngClass]="{ 'show-form': isForm }">
   <div class="description-container">
-    <span class="vendor-name">{{ bonus?.company.name }}</span>
+    <span class="vendor-name">{{ bonus?.company?.name }}</span>
     <p class="bonus-description">{{ bonus?.description }}</p>
   </div>
   <div class="bonus-content">
