--- a/src/app/features/add-bonus/add-bonus.component.html
+++ b/src/app/features/add-bonus/add-bonus.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="add-bonus-container">
   <div *ngIf="!isFormActive">
     <app-add-bonus-button (openForm)="openForm()"></app-add-bonus-button>
     <app-bonus-searcher
@@ -6,7 +6,7 @@
       [vendors]="vendors"
       (getBonusesByVendorId)="getBonusesByVendorId($event)"
     ></app-bonus-searcher>
-    <div>
+    <div class="box">
       <app-bonus-list-view
         [bonuses]="bonuses"
         (bonusButtonClickedEvent)="openEditForm($event)"
