--- a/src/app/features/home/confirm/confirm.component.html
+++ b/src/app/features/home/confirm/confirm.component.html
@@ -1,6 +1,6 @@
 <h2 class="apply" mat-dialog-title>{{ 'home.confirm.question' | translate }}</h2>
 <mat-dialog-content class="mat-typography content">
-  <h4 class="company-name">{{ data?.company.name }}</h4>
+  <h4 class="company-name">{{ data?.company?.name }}</h4>
   <div class="title-container">
     <img class="discount-icon" src="assets/icons/discount-icon.svg" alt="discount" />
     <span class="bonus-title"> {{ data?.title }}</span>
