--- a/src/app/features/history/history.component.html
+++ b/src/app/features/history/history.component.html
@@ -1,4 +1,4 @@
-<div class="box">
+<div class="bonus-container">
   <app-bonus-list-view
     [bonuses]="bonuses"
     [bonusButtonLabel]="bonusButtonLabel"
