--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -4,7 +4,7 @@
   (change)="sortValueChange($event)"
   data-test="radio-group"
 >
-  <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary">
+  <mat-radio-button class="radio-button" value="Title" labelPosition="before" color="primary" checked="true">
     {{ 'home.pick.sorting.byTitle' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary">
