add const for roles

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -26,12 +26,12 @@
               'header.history' | translate
             }}</a>
           </li>
-          <li class="menu-item" *ngIf="hasRole('moderator') || hasRole('admin')">
+          <li class="menu-item" *ngIf="hasRole(roleType.moderator) || hasRole(roleType.admin)">
             <a [routerLink]="['bonuses']" [routerLinkActive]="'active'">{{
               'header.bonuses' | translate
             }}</a>
           </li>
-          <li class="menu-item" *ngIf="hasRole('admin')">
+          <li class="menu-item" *ngIf="hasRole(roleType.admin)">
             <a [routerLink]="['statistics']" [routerLinkActive]="'active'">{{
               'header.statistics' | translate
             }}</a>
