--- a/src/app/features/statistics/statistics.component.html
+++ b/src/app/features/statistics/statistics.component.html
@@ -16,7 +16,6 @@
         [matAutocomplete]="auto"
         [(ngModel)]="filterParams.vendor"
         (keyup.enter)="vendorNameChange()"
-        (blur)="vendorNameChange()"
       />
       <mat-autocomplete #auto="matAutocomplete">
         <mat-option
@@ -34,7 +33,15 @@
     </mat-form-field>
     <mat-form-field class="statistics-flters-element">
       <mat-label>{{ 'statistics.type' | translate }}</mat-label>
-      <input matInput type="text" placeholder="Bonus type" [(ngModel)]="filterParams.type" />
+      <mat-select [(ngModel)]="filterParams.type">
+        <mat-option
+          *ngFor="let type of types"
+          [value]="type"
+          (click)="setType(type)"
+        >
+          {{ type }}
+        </mat-option>
+      </mat-select>
     </mat-form-field>
     <mat-checkbox
       class="statistics-flters-element"
