add tests for rate component

--- a/src/app/shared/components/rating/rate/rate.component.html
+++ b/src/app/shared/components/rating/rate/rate.component.html
@@ -4,6 +4,7 @@
 </div>
 <div *ngIf="isForm" class="rate-form">
   <mat-slider
+    id="ratingSlider"
     class="slider"
     tickInterval="1"
     min="0"
