update with develop

--- a/src/app/features/history/history.component.scss
+++ b/src/app/features/history/history.component.scss
@@ -3,8 +3,13 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
 .bonus-container {
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+}
+
+.spinner {
+  margin: auto;
 }
