--- a/src/app/shared/components/city-input/city-input.component.html
+++ b/src/app/shared/components/city-input/city-input.component.html
@@ -1,5 +1,5 @@
 <mat-form-field class="city-input">
-  <mat-label>City</mat-label>
+  <mat-label> {{ 'cityInput.city' | translate }} </mat-label>
   <input
     matInput
     type="text"
