--- a/src/app/shared/components/sort-container/sort-container.component.html
+++ b/src/app/shared/components/sort-container/sort-container.component.html
@@ -11,18 +11,18 @@
     color="primary"
     checked="true"
   >
-    {{ 'home.pick.sorting.byTitle' | translate }}
+    {{ 'sorting.byTitle' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="DateStart" labelPosition="before" color="primary">
-    {{ 'home.pick.sorting.byDateStart' | translate }}
+    {{ 'sorting.byDateStart' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="DateEnd" labelPosition="before" color="primary">
-    {{ 'home.pick.sorting.byDateEnd' | translate }}
+    {{ 'sorting.byDateEnd' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="Rating" labelPosition="before" color="primary">
-    {{ 'home.pick.sorting.byRating' | translate }}
+    {{ 'sorting.byRating' | translate }}
   </mat-radio-button>
   <mat-radio-button class="radio-button" value="Type" labelPosition="before" color="primary">
-    {{ 'home.pick.sorting.byType' | translate }}
+    {{ 'sorting.byType' | translate }}
   </mat-radio-button>
 </mat-radio-group>
