add footer component and remove router outlet (unused)

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -11,5 +11,5 @@
   <section class="right">
     <app-map-container class="map"></app-map-container>
   </section>
-  <router-outlet></router-outlet>
+  <app-footer class="footer"></app-footer>
 </section>
