--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -21,13 +21,14 @@
   min-width: 540px;
   width: 540px;
   margin: 0 5px;
+  padding-bottom: 50px;
 }
 
 .right {
   width: 100%;
   display: flex;
   flex-direction: column;
-  padding: 0 20px 20px 0;
+  padding: 0 20px 70px 0;
 }
 
 .bonus-list {
@@ -83,6 +84,7 @@ h2 {
     display: block;
     height: auto;
     width: 100vw;
+    scroll-snap-type: x mandatory;
   }
   .left {
     margin: 0;
@@ -98,10 +100,12 @@ h2 {
   .home {
     height: auto;
     flex-direction: column-reverse;
+    top: 55px;
   }
 
   .right {
     height: 50vh;
+    padding-bottom: 0;
   }
 
   .left {
