--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -12,7 +12,7 @@
   width: 36px;
 }
 
-.in-mobile {
+.mobile-visible {
   display: none;
 }
 
@@ -171,10 +171,10 @@
     box-shadow: 10px -4px 8px rgba(0, 0, 0, 0.25);
     box-sizing: border-box;
   }
-  .in-mobile {
+  .mobile-visible {
     display: block;
   }
-  .in-pc {
+  .pc-visible {
     display: none;
   }
   .bonus-content {
@@ -210,6 +210,9 @@
   }
   .discount-value {
     width: 60%;
+    text-align: right;
+    display: block;
+    margin-right: 5px;
   }
   .tags {
     display: none;
