add styles to fix bug

--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -189,6 +189,7 @@
     color: black;
     border-right: none;
     margin-left: 0;
+    flex: 1 1 100%;
     .bonus-description {
       font-size: 16px;
       padding-top: 2px;
