added spinner and notification

--- a/src/app/features/history/history.component.html
+++ b/src/app/features/history/history.component.html
@@ -1,8 +1,13 @@
-<div class="bonus-container">
+<div class="bonus-container" >
   <app-bonus-list-view
+  *ngIf="!loading; else loadingBlock"
     [bonuses]="bonuses"
     [bonusButtonLabel]="bonusButtonLabel"
     (bonusButtonClickedEvent)="openRateBonusForm($event)"
     class="bonus-list"
   ></app-bonus-list-view>
+  <ng-template #loadingBlock>
+    <mat-spinner class="spinner"></mat-spinner>
+  </ng-template>
 </div>
+
