feat: add translation

--- a/src/app/shared/components/choose-place-dialog/choose-place-dialog.component.html
+++ b/src/app/shared/components/choose-place-dialog/choose-place-dialog.component.html
@@ -34,7 +34,7 @@
       (click)="apply()"
       [disabled]="!placeChoosen"
     >
-      OK
+    {{ 'choosePlace.ok' | translate }}
     </button>
     <button mat-flat-button class="geoButton" color="primary" (click)="cancel()">
       {{ 'choosePlace.cancel' | translate }}
