--- a/src/app/features/home/map/bonus-popup/bonus-popup.component.html
+++ b/src/app/features/home/map/bonus-popup/bonus-popup.component.html
@@ -1,14 +1,7 @@
 <div>
   <h3>{{ bonus.company.name }}</h3>
   <h1>{{ bonus.type }}</h1>
-
-  <!-- TODO: fix "Share with friends" button  -->
-
-  <!-- <a mat-flat-button color="primary" href="{{ markerLink }}" target="_blank">{{
-    'popup.detail' | translate
-  }}</a> -->
-
-  <button mat-flat-button color="primary" (click)="showBonusMap()">
+  <button class="button-detail" mat-flat-button color="primary" (click)="showBonusMap()">
     {{ 'popup.detail' | translate }}
   </button>
 </div>
