fix bug with sliding

--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.html
@@ -1,4 +1,4 @@
-<section class="bonus" [ngClass]="{ 'show-form': isForm }">
+<section class="bonus sliding" [ngClass]="{ 'show-form': isForm }">
   <div class="description-container">
     <span class="vendor-name">{{ bonus?.company.name }}</span>
     <div class="bonus-name mobile-visible">{{ bonus?.type }}</div>
