change map navigation logic and fix interceptor bug

--- a/src/app/features/home/map/map-view/map-view.component.html
+++ b/src/app/features/home/map/map-view/map-view.component.html
@@ -4,6 +4,7 @@
   [leafletOptions]="options"
   (leafletMapReady)="onMapReady($event)"
   (leafletMapZoom)="onMapZoom()"
+  (leafletMapMoveEnd)="onMapMoveEnd()"
 >
   <button class="change-location-button" (click)="changePlace()" icon>
     <mat-icon>share_location</mat-icon>
