--- a/src/app/features/home/map/bonus-popup/bonus-popup.component.html
+++ b/src/app/features/home/map/bonus-popup/bonus-popup.component.html
@@ -5,10 +5,10 @@
   <!-- TODO: fix "Share with friends" button  -->
 
   <!-- <a mat-flat-button color="primary" href="{{ markerLink }}" target="_blank">{{
-    'popup.detail' | translate
+    'popup.forward' | translate
   }}</a> -->
 
   <button mat-flat-button color="primary" (click)="showBonusMap()">
-    {{ 'popup.detail' | translate }}
+    {{ 'popup.forward' | translate }}
   </button>
 </div>
