--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -66,7 +66,7 @@ $exadelBonus-theme: mat-light-theme(
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 $custom-typography: mat-typography-config(
-  $font-family: 'Mulish',
+  $font-family: 'Roboto',
 );
 @include angular-material-typography($custom-typography);
 @include angular-material-theme($exadelBonus-theme);
