--- a/src/app/features/add-bonus/add-bonus-form/add-bonus-form.component.html
+++ b/src/app/features/add-bonus/add-bonus-form/add-bonus-form.component.html
@@ -65,12 +65,8 @@
     </button>
     <mat-form-field class="add-bonus-input" appearance="fill" aria-autocomplete="off">
       <mat-label>{{ 'addBonus.form.phone' | translate }}</mat-label>
-      <input
-        matInput
-        placeholder="+00(000) 000-00-00"
-        formControlName="phone"
-        mask="+00(000) 000-00-00"
-      />
+      <span matPrefix class="phone-prefix">+ &nbsp;</span>
+      <input matInput placeholder="000000000000" formControlName="phone" type="number" />
     </mat-form-field>
     <mat-form-field class="add-bonus-input" appearance="fill">
       <mat-label>{{ 'addBonus.form.bonusType' | translate }}</mat-label>
