--- a/src/app/features/statistics/statistics.component.html
+++ b/src/app/features/statistics/statistics.component.html
@@ -12,7 +12,7 @@
       <input
         matInput
         type="text"
-        placeholder="{{'statistics.vendorName' | translate}}"
+        placeholder="{{ 'statistics.vendorName' | translate }}"
         [matAutocomplete]="auto"
         [(ngModel)]="filterParams.vendor"
         (keyup.enter)="vendorNameChange()"
@@ -29,7 +29,12 @@
     </mat-form-field>
     <mat-form-field class="statistics-flters-element">
       <mat-label>{{ 'statistics.bonus' | translate }}</mat-label>
-      <input matInput type="text" placeholder="{{'statistics.bonusTitle' | translate}}" [(ngModel)]="filterParams.bonus" />
+      <input
+        matInput
+        type="text"
+        placeholder="{{ 'statistics.bonusTitle' | translate }}"
+        [(ngModel)]="filterParams.bonus"
+      />
     </mat-form-field>
     <mat-form-field class="statistics-flters-element">
       <mat-label>{{ 'statistics.type' | translate }}</mat-label>
