--- a/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
+++ b/src/app/shared/components/bonus-list-container/bonus/bonus.component.scss
@@ -185,6 +185,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
+    padding-bottom: 20px;
   }
   .description-container {
     background-color: white;
