--- a/src/app/shared/components/rating/rate/rate.component.scss
+++ b/src/app/shared/components/rating/rate/rate.component.scss
@@ -88,6 +88,10 @@
   }
 }
 
+.discount-row.form-stars {
+  padding: 5px;
+}
+
 .buttons-container {
   display: flex;
   justify-content: space-between;
