--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<div class="with-footer-page">
+  <app-header></app-header>
+  <router-outlet></router-outlet>
+  <app-footer class="footer"></app-footer>
+</div>
+
