--- a/src/app/features/login/login.component.scss
+++ b/src/app/features/login/login.component.scss
@@ -29,6 +29,7 @@
 .login-form-container {
   height: 100%;
   margin-top: 50px;
+  padding-bottom: 20px;
 
   @media screen and (min-width: 768px) {
     width: 400px;
