--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,14 @@ body {
   padding: 20px 0;
   margin-bottom: 80px;
 }
+
+.with-footer-page {
+  min-height: calc(100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer {
+
+}
