--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <div class="with-footer-page">
   <app-header></app-header>
   <router-outlet></router-outlet>
-  <app-footer class="footer"></app-footer>
+  <app-footer></app-footer>
 </div>
-
