--- a/src/app/features/history/history.component.html
+++ b/src/app/features/history/history.component.html
@@ -1,4 +1,4 @@
-<div class="bonus-container">
+<div class="history bonus-container">
   <app-bonus-list-view
     *ngIf="!loading; else loadingBlock"
     [bonuses]="bonuses"
