--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="with-footer-page">
   <app-header></app-header>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <router-outlet class="router"></router-outlet>
+  <app-footer class="footeristic"></app-footer>
 </div>
