--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,10 @@ body {
   min-height: calc(100%);
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+}
+
+.footeristic {
+  margin-top: auto;
 }
 
 @media (min-width: 541px), (min-device-width: 541px) {
