add margin to inline bonus list in home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="with-footer-page">
   <app-header></app-header>
   <router-outlet class="router"></router-outlet>
-  <app-footer class="footeristic"></app-footer>
+  <app-footer class="footer"></app-footer>
 </div>
